--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@tailwindcss/vite": "^4.0.12",
     "@types/html-minifier-terser": "^7.0.2",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.13.10",
     "@vitest/ui": "^3.0.8",
     "classnames": "^2.5.1",
     "cookie": "^1.0.2",
@@ -44,6 +44,7 @@
     "iconify-icon": "^2.3.0",
     "js-yaml": "^4.1.0",
     "jsdom": "^26.0.0",
+    "mdsvex": "^0.12.3",
     "nanostores": "^0.11.4",
     "svelte": "^5.22.6",
     "svelte-check": "^4.1.5",
